--- a/Commission.html
+++ b/Commission.html
@@ -25,24 +25,24 @@
 	<body class="left-sidebar is-preload">
 		<div id="page-wrapper">
 
-			<!-- header 最上面那段橫的標示 -->
+			<!-- header -->
 				<header id="header" class="alt">
 					<h1 id="logo"><a href="index.html">Portfolio <span>by JUAN</span></a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">經歷</a></li>
-							<li class="current"><a href="index.html" style="color: rgb(255, 221, 100);">商業委託</a></li>
-							<li class="current"><a href="index.html">平面設計</a></li>
-							<li class="current"><a href="index.html">社群相關</a></li>
-							<li class="current"><a href="index.html">活動規劃</a></li>
-							<li class="current"><a href="index.html">影音作品</a></li>
+							<li class="current"><a href="Experience.html">經歷</a></li>
+							<li class="current"><a href="Commission.html" style="color: rgb(255, 221, 100);">商業委託</a></li>
+							<li class="current"><a href="Graphic_Design.html">平面設計</a></li>
+							<li class="current"><a href="Social_Media.html">社群相關</a></li>
+							<li class="current"><a href="Event_Planning.html">活動規劃</a></li>
+							<li class="current"><a href="Video_Editing.html">影音作品</a></li>
 		
 						</ul>
 					</nav>
 				</header>
 
-			<!-- Banner 首頁橫幅照片的部分-->
-				<section id="banner3"></section>
+			<!-- Banner -->
+				<section id="banner"  class="bannerPic3"></section>
 
 
 			<!-- Main2 -->
@@ -74,27 +74,38 @@
 							<!-- 輪播項目 -->
 							<div class="carousel-inner baoimg">
 								<div class="item active">
-									<img src="./images/商業委託/Mavi-01.jpg" alt="三折菜單">
+									<a href="https://www.facebook.com/MaviTurkishRestaurantTw" target="_blank">
+										<img src="./images/商業委託/Mavi-01.jpg" alt="三折菜單">
+									</a>
 								</div>
 				
 								<div class="item">
-									<img src="./images/商業委託/Mavi-02.jpg" alt="三折菜單正面">
+									<a href="https://www.facebook.com/MaviTurkishRestaurantTw" target="_blank">
+										<img src="./images/商業委託/Mavi-02.jpg" alt="三折菜單正面">
+									</a>
 								</div>
 				
 								<div class="item">
-									<img src="./images/商業委託/Mavi-03.jpg" alt="三折菜單反面">
+									<a href="https://www.facebook.com/MaviTurkishRestaurantTw" target="_blank">
+										<img src="./images/商業委託/Mavi-03.jpg" alt="三折菜單反面">
 								</div>
 
 								<div class="item">
-									<img src="./images/商業委託/MAVI-04.jpg" alt="A4傳單">
+									<a href="https://www.facebook.com/MaviTurkishRestaurantTw" target="_blank">
+										<img src="./images/商業委託/MAVI-04.jpg" alt="A4傳單">
+									</a>
 								</div>
 
 								<div class="item">
-									<img src="./images/商業委託/Mavi-05.jpg" alt="外帶菜單">
+									<a href="https://www.facebook.com/MaviTurkishRestaurantTw" target="_blank">
+										<img src="./images/商業委託/Mavi-05.jpg" alt="外帶菜單">
+									</a>
 								</div>
 
 								<div class="item">
-									<img src="./images/商業委託/Mavi-06.jpg" alt="名片">
+									<a href="https://www.facebook.com/MaviTurkishRestaurantTw" target="_blank">
+										<img src="./images/商業委託/Mavi-06.jpg" alt="名片">
+									</a>
 								</div>
 
 							</div>
@@ -130,7 +141,9 @@
 							<!-- 輪播項目 -->
 							<div class="carousel-inner baoimg">
 								<div class="item active">
-									<img src="./images/商業委託/福輪達.jpg" alt="福倫達">
+									<a href="https://www.camera-sharp.com/" target="_blank">
+										<img src="./images/商業委託/福輪達.jpg" alt="福倫達">
+									</a>
 								</div>
 
 							</div>
@@ -153,7 +166,9 @@
 							<!-- 輪播項目 -->
 							<div class="carousel-inner baoimg">
 								<div class="item active">
-									<img src="./images/商業委託/鴻澄.jpg" alt="鴻澄泥作">
+									<a href="https://www.facebook.com/profile.php?id=100054622546704" target="_blank">
+										<img src="./images/商業委託/鴻澄.jpg" alt="鴻澄泥作">
+									</a>
 								</div>
 
 							</div>
