--- a/Social_Media.html
+++ b/Social_Media.html
@@ -30,12 +30,12 @@
 					<h1 id="logo"><a href="index.html">Portfolio <span>by JUAN</span></a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">經歷</a></li>
-							<li class="current"><a href="index.html">商業委託</a></li>
-							<li class="current"><a href="index.html">平面設計</a></li>
-							<li class="current"><a href="index.html" style="color: rgb(255, 221, 100);">社群相關</a></li>
-							<li class="current"><a href="index.html">活動規劃</a></li>
-							<li class="current"><a href="index.html">影音作品</a></li>
+							<li class="current"><a href="Experience.html">經歷</a></li>
+							<li class="current"><a href="Commission.html">商業委託</a></li>
+							<li class="current"><a href="Graphic_Design.html">平面設計</a></li>
+							<li class="current"><a href="Social_Media.html" style="color: rgb(255, 221, 100);">社群相關</a></li>
+							<li class="current"><a href="Event_Planning.html">活動規劃</a></li>
+							<li class="current"><a href="Video_Editing.html">影音作品</a></li>
 
 						</ul>
 					</nav>
