--- a/Event_Planning.html
+++ b/Event_Planning.html
@@ -69,7 +69,7 @@
 						<!-- 輪播項目 -->
 							<div class="carousel-inner">
 								<div class="item active">
-									<img src="./images/Mavi-01.jpg" alt="Mavi土耳其餐廳">
+									<img src="./images/平面設計/ANNS-03.jpg" alt="Mavi土耳其餐廳">
 								</div>
 				
 								<div class="item">
