--- a/Social_Media.html
+++ b/Social_Media.html
@@ -41,8 +41,8 @@
 					</nav>
 				</header>
 
-			<!-- Banner 首頁橫幅照片的部分-->
-				<section id="banner5"></section>
+			<!-- Banner -->
+				<section id="banner" class="bannerPic5"></section>
 
 			<!-- Main2 -->
 				<article id="main2">
