--- a/Experience.html
+++ b/Experience.html
@@ -100,7 +100,7 @@
 								<br>
 								&emsp;♢視覺相關設計
 								<br>
-								&emsp;♢社群圖文
+								&emsp;♢FB、IG社群圖文
 								<br>
 								&emsp;♢活動企劃與執行
 								<br>
