--- a/Event_Planning.html
+++ b/Event_Planning.html
@@ -52,6 +52,12 @@
 				<br>
 				<br>
 
+				<div style="font-size:30px; text-align:center;">
+					<strong>活動規劃 Event Planning</strong>
+				</div>
+
+				<br>				
+
 				<!-- Mavi土耳其餐廳 -->
 				<div class="container">
 					<div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:75%;">
