--- a/Experience.html
+++ b/Experience.html
@@ -40,7 +40,7 @@
 	
 					<div>
 						<div style="font-size:30px; text-align:center;">
-							<strong>工作經歷</strong>
+							<strong>工作經歷 Experience</strong>
 						</div>
 
 						<br>
