--- a/Video_Editing.html
+++ b/Video_Editing.html
@@ -50,6 +50,12 @@
 					<br>
 					<br>
 
+					<div style="font-size:30px; text-align:center;">
+						<strong>影音作品 Video Editing</strong>
+					</div>
+	
+					<br>	
+
 				<!-- Ann'S部落格 -->
 				<div class="container">
 					<div id="AnnsBlog" class="carousel slide" data-ride="carousel" style="width:75%;">
