--- a/Event_Planning.html
+++ b/Event_Planning.html
@@ -255,44 +255,38 @@
 						<!-- 葛瑪蘭 節慶 輪播項目 -->
 							<div class="carousel-inner LAimg">
 								<div class="item active">
-									<a href="https://fl.gamalanhotel.com/" target="_blank">
-										<img src="./images/活動規劃/軟裝佈置-01.jpg" alt="葛瑪蘭 節慶">
+									<a href="http://gs.gamalanhotel.com/" target="_blank">
+										<img src="./images/活動規劃/節慶佈置-01.jpg" alt="葛瑪蘭 節慶">
 									</a>
 								</div>
 				
 								<div class="item">
-									<a href="https://fl.gamalanhotel.com/" target="_blank">
-										<img src="./images/活動規劃/軟裝佈置-02.jpg" alt="葛瑪蘭 節慶">
+									<a href="http://gs.gamalanhotel.com/" target="_blank">
+										<img src="./images/活動規劃/節慶佈置-02.jpg" alt="葛瑪蘭 節慶">
 									</a>
 								</div>
 				
 								<div class="item">
-									<a href="https://fl.gamalanhotel.com/" target="_blank">
-										<img src="./images/活動規劃/軟裝佈置-03.jpg" alt="葛瑪蘭 節慶">
+									<a href="http://gs.gamalanhotel.com/" target="_blank">
+										<img src="./images/活動規劃/節慶佈置-03.jpg" alt="葛瑪蘭 節慶">
+									</a>
+								</div>
+
+								<div class="item">
+									<a href="http://gs.gamalanhotel.com/" target="_blank">
+										<img src="./images/活動規劃/節慶佈置-04.jpg" alt="葛瑪蘭 節慶">
 									</a>
 								</div>
 
 								<div class="item">
 									<a href="https://fl.gamalanhotel.com/" target="_blank">
-										<img src="./images/活動規劃/軟裝佈置-04.jpg" alt="葛瑪蘭 節慶">
+										<img src="./images/活動規劃/節慶佈置-05.jpg" alt="葛瑪蘭 節慶">
 									</a>
 								</div>
 
 								<div class="item">
 									<a href="https://fl.gamalanhotel.com/" target="_blank">
-										<img src="./images/活動規劃/軟裝佈置-05.jpg" alt="葛瑪蘭 節慶">
-									</a>
-								</div>
-
-								<div class="item">
-									<a href="https://fl.gamalanhotel.com/" target="_blank">
-										<img src="./images/活動規劃/軟裝佈置-06.jpg" alt="葛瑪蘭 節慶">
-									</a>
-								</div>
-
-								<div class="item">
-									<a href="https://fl.gamalanhotel.com/" target="_blank">
-										<img src="./images/活動規劃/軟裝佈置-07.jpg" alt="葛瑪蘭 節慶">
+										<img src="./images/活動規劃/節慶佈置-06.jpg" alt="葛瑪蘭 節慶">
 									</a>
 								</div>
 
