--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
 							崇右影藝科大 / 視覺傳達設計系
 							<br>
 							手機 / 0970701233
-							&emsp;&emsp;Mail / aa40332024@gmail.com
-							&emsp;&emsp;Line ID / cyyyyyu_k
+							<br>
+							Mail / aa40332024@gmail.com
+							<br>
+							Line ID / cyyyyyu_k
 						</div>
 						
 						<div style="font-size:23px; text-align:center;">
@@ -86,13 +88,13 @@
 					<div>
 						<!-- ICON -->
 						<div style="text-align:center; ">
-						<img src="./images/首頁ICON/Adobe-AI.png" alt="AI" style="width: 70px;height: 70px;">
-						<img src="./images/首頁ICON/Adobe-PS.png" alt="PS" style="width: 70px;height: 70px;">
-						<img src="./images/首頁ICON/Adobe-ID.png" alt="ID" style="width: 70px;height: 70px;">
-						<img src="./images/首頁ICON/Adobe-PR.png" alt="PR" style="width: 70px;height: 70px;">
-						<img src="./images/首頁ICON/Office-WODR.png" alt="WORD" style="width: 70px;height: 70px;">
-						<img src="./images/首頁ICON/Office-EXCEL.png" alt="EXCEL" style="width: 70px;height: 70px;">
-						<img src="./images/首頁ICON/Office-PPT.png" alt="PPT" style="width: 70px;height: 70px;">
+						<img src="./images/首頁ICON/Adobe-AI.png" alt="AI" style="width: 50px;height: 50px; margin-right: 5px;">
+						<img src="./images/首頁ICON/Adobe-PS.png" alt="PS" style="width: 50px;height: 50px; margin-right: 5px;">
+						<img src="./images/首頁ICON/Adobe-ID.png" alt="ID" style="width: 50px;height: 50px; margin-right: 5px;">
+						<img src="./images/首頁ICON/Adobe-PR.png" alt="PR" style="width: 50px;height: 50px; margin-right: 5px;">
+						<img src="./images/首頁ICON/Office-WODR.png" alt="WORD" style="width: 50px;height: 50px; margin-right: 5px;">
+						<img src="./images/首頁ICON/Office-EXCEL.png" alt="EXCEL" style="width: 50px;height: 50px; margin-right: 5px;">
+						<img src="./images/首頁ICON/Office-PPT.png" alt="PPT" style="width: 50px;height: 50px; margin-right: 5px;">
 					</div>
 				
 					<br>
@@ -100,9 +102,6 @@
 					<br>
 
 				</article>
-
-
-
 		</div>
 
 	</body>
